@@ -20,20 +20,25 @@
 #ifndef RCPP__CHECK__R__HEADERS__H
 #define RCPP__CHECK__R__HEADERS__H
 
-#if defined(R_R_H) & defined(USING_R)
-#pragma message "R.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
-#endif
+// Allow an escape hatch
+#if !defined(RCPP_NO_R_HEADERS_CHECK)
 
-#if defined(RINTERFACE_H_)
-#pragma message "Rinterface.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
-#endif
+  #if defined(R_R_H) & defined(USING_R)
+    #pragma message "R.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
+  #endif
 
-#if defined(R_INTERNALS_H_)
-#pragma message "Rinternals.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
-#endif
+  #if defined(RINTERFACE_H_)
+    #pragma message "Rinterface.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
+  #endif
 
-#if defined(R_DEFINES_H_)
-#pragma message "Rdefines.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
-#endif
+  #if defined(R_INTERNALS_H_)
+    #pragma message "Rinternals.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
+  #endif
 
-#endif
+  #if defined(R_DEFINES_H_)
+    #pragma message "Rdefines.h has been included before any Rcpp headers. This can lead to hard-to-debug errors, and is generally not necessary. See https://github.com/RcppCore/Rcpp/issues/1410"
+  #endif
+
+#endif  // escape hatch '!defined(RCPP_NO_R_HEADERS_CHECK)'
+
+#endif  // header guard
